# shortcake

./: Cargo.toml  README.md
scraps/: _README  abg.py  abg.py.md  logos.txt  this_looks_cool.txt
src/: abg.rs  color_code.rs  file_desc.rs  main.rs
