[package]
name = "shortcake"
description = "the most delicious code editor yet"
readme = "README.md"
version = "1.0.0"
edition = "2021"
authors = ["qwertyy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
chrono = "0.4"
clearscreen = "2.0.1"
open = "5.1.2"
rand = "0.8"
termsize = "0.1.6"
whoami = "1.5.1"
